--- a/home4.html
+++ b/home4.html
@@ -61,19 +61,19 @@
 
 <div class="container"> 
   <div class="column">
-    <img src="anh01.jpeg" alt="Hinh 1">
+    <img src="anh01.jpg" alt="Hinh 1">
   </div>
   
   <div class="column">
-    <img src="anh02.jpeg" alt="Hinh 2">
+    <img src="anh02.jpg" alt="Hinh 2">
   </div> 
    
   <div class="column">
-    <img src=anh03.jpeg" alt="Hinh 3">
+    <img src=anh03.jpg" alt="Hinh 3">
   </div>
   
   <div class="column">
-    <img src="anh04.jpeg" alt="Hinh 4">
+    <img src="anh04.jpg" alt="Hinh 4">
   </div>
 </div>
 
